force-app/main/default/objects/Lead/fields/Partner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Segment__c</fullName>
    <label>Partner Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Program__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Compliance Services</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Direct to Consumer</fullName>
            </value>
            <value>
                <fullName>EOR</fullName>
            </value>
            <value>
                <fullName>Finance &amp; ERP</fullName>
            </value>
            <value>
                <fullName>Future of Work</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Mission Driven</fullName>
            </value>
            <value>
                <fullName>OFR</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Social Impact</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition Services</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition Technology</fullName>
            </value>
            <value>
                <fullName>Tools/Software</fullName>
            </value>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>Visa &amp; Relocation</fullName>
            </value>
            <value>
                <fullName>Consulting &amp; Advisory</fullName>
                <isActive>false</isActive>
                <label>Consulting &amp; Advisory</label>
            </value>
            <value>
                <fullName>HR Tech</fullName>
                <isActive>false</isActive>
                <label>HR Tech</label>
            </value>
            <value>
                <fullName>HR Tech Stack</fullName>
                <isActive>false</isActive>
                <label>HR Tech Stack</label>
            </value>
            <value>
                <fullName>Operations &amp; Tools</fullName>
                <isActive>false</isActive>
                <label>Operations &amp; Tools</label>
            </value>
            <value>
                <fullName>Recruiting</fullName>
                <isActive>false</isActive>
                <label>Recruiting</label>
            </value>
            <value>
                <fullName>Relocation/Visas</fullName>
                <isActive>false</isActive>
                <label>Relocation/Visas</label>
            </value>
            <value>
                <fullName>Remote Work / Future of Work</fullName>
                <isActive>false</isActive>
                <label>Remote Work / Future of Work</label>
            </value>
            <value>
                <fullName>Social Impact - ESG</fullName>
                <isActive>false</isActive>
                <label>Social Impact - ESG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>