force-app/main/default/objects/Lead/fields/Partnership_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Opportunity__c</fullName>
    <label>Partnership Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>