force-app/main/default/objects/Lead/fields/PartnershipOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PartnershipOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartnershipOpportunity</label>
    <type>Checkbox</type>
</CustomField>