force-app/main/default/objects/Lead/fields/Partnerstack_Referral_Link__c.field-meta.xml
<CustomField>
    <fullName>Partnerstack_Referral_Link__c</fullName>
    <label>Partnerstack Referral Link</label>
    <type>TextArea</type>
</CustomField>