force-app/main/default/objects/Lead/fields/People_Benefits_Views_Last_90d__c.field-meta.xml
<CustomField>
    <fullName>People_Benefits_Views_Last_90d__c</fullName>
    <inlineHelpText>#views ‘People Benefits’ in Oyster platform over the last 90 days</inlineHelpText>
    <label>#People Benefits Views (Last 90d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>