force-app/main/default/objects/Lead/fields/Person_City__c.field-meta.xml
<CustomField>
    <fullName>Person_City__c</fullName>
    <description>Enriched through Clearbit.</description>
    <label>Person City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>