force-app/main/default/objects/Lead/fields/Person_Country__c.field-meta.xml
<CustomField>
    <fullName>Person_Country__c</fullName>
    <description>Enriched through Clearbit.</description>
    <label>Person Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>