force-app/main/default/objects/Lead/fields/Platform_Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Platform_Account_Created_Date__c</fullName>
    <description>Set in HubSpot, when a person creates an Oyster account and syncs to HubSpot</description>
    <label>Platform Account Created Date</label>
    <type>Date</type>
</CustomField>