force-app/main/default/objects/Lead/fields/Platform_Account_Creation_Method__c.field-meta.xml
<CustomField>
    <fullName>Platform_Account_Creation_Method__c</fullName>
    <label>Platform Account Creation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>