force-app/main/default/objects/Lead/fields/Platform_FTE_For_Companies_IDs__c.field-meta.xml
<CustomField>
    <fullName>Platform_FTE_For_Companies_IDs__c</fullName>
    <label>Platform FTE For Companies IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>