force-app/main/default/objects/Lead/fields/Platform_Hire_Submitted_Last_90d__c.field-meta.xml
<CustomField>
    <fullName>Platform_Hire_Submitted_Last_90d__c</fullName>
    <formula>OR(
    FTE_Hires_Submitted_Last_90d__c &gt; 0,
    Contractor_Hires_Submitted_Last_90d__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Box is checked if the user has submitted an FTE or Contractor hire in the last 90 days.</inlineHelpText>
    <label>Platform Hire Submitted (Last 90d)</label>
    <type>Checkbox</type>
</CustomField>