force-app/main/default/objects/Lead/fields/Platform_Submitted_a_hire_date__c.field-meta.xml
<CustomField>
    <fullName>Platform_Submitted_a_hire_date__c</fullName>
    <description>Synced from Census to Platform.</description>
    <label>Platform: Submitted a hire date</label>
    <type>Date</type>
</CustomField>