force-app/main/default/objects/Lead/fields/Referrer_URL__c.field-meta.xml
<CustomField>
    <fullName>Referrer_URL__c</fullName>
    <description>The referring URL string.</description>
    <label>Referrer_URL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>