force-app/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Replaced with a new Region formula field, but can be used to override if needed. This is because the formula for &quot;Region&quot; field first looks for a value in this field if there is one before continuing to run the rest of the formula. This field was deprecated and replaced with the new Region formula field, but has since been re-used at request of Adrienne for Partner forms.</description>
    <inlineHelpText>Use this field to override the &quot;Region&quot; value</inlineHelpText>
    <label>Region (picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>