force-app/main/default/objects/Lead/fields/Related_Account_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_ID_Text__c</fullName>
    <description>Text version of the Account ID needed for HubSpot sync.</description>
    <formula>AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account ID [Text]</label>
    <type>Text</type>
</CustomField>