force-app/main/default/objects/Lead/fields/Remove_from_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Remove_from_Cadence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in automation in Salesloft to remove person from Cadence.
Set in LeanData C+L routers for some leads and manually.</description>
    <label>Remove from Cadence</label>
    <type>Checkbox</type>
</CustomField>