force-app/main/default/objects/Lead/fields/Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Date_Time__c</fullName>
    <description>Stamped automatically when the lead status changes or an email/call task is logged.</description>
    <label>Response Date/Time</label>
    <type>DateTime</type>
</CustomField>