force-app/main/default/objects/Lead/fields/Response_Time_days__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_days__c</fullName>
    <formula>(First_Activity_Date__c - MQL_Date__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>