force-app/main/default/objects/Lead/fields/Response_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Minutes__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(Response_Date_Time__c)),NOT(ISBLANK(Became_MQL_Date_Time__c))),
    (Response_Date_Time__c - Became_MQL_Date_Time__c) * 24 * 60,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>