force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Person&apos;s standardized role, based on title (ex: sales, marketing, etc.) from Clearbit</description>
    <inlineHelpText>Person&apos;s role enriched from Clearbit</inlineHelpText>
    <label>Role</label>
    <type>TextArea</type>
</CustomField>