force-app/main/default/objects/Lead/fields/Routing_Group__c.field-meta.xml
<CustomField>
    <fullName>Routing_Group__c</fullName>
    <description>Stamp from router, indicating pool to which it was routed</description>
    <label>Routing Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>