force-app/main/default/objects/Lead/fields/Sales_Activity_Lapse__c.field-meta.xml
<CustomField>
    <fullName>Sales_Activity_Lapse__c</fullName>
    <formula>TODAY() - Last_Sales_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>#Days since ‘Last Sales Activity’</inlineHelpText>
    <label>Sales Activity Lapse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>