force-app/main/default/objects/Lead/fields/Salesloft_Person_Stage__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Person_Stage__c</fullName>
    <label>Salesloft Person Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>