force-app/main/default/objects/Lead/fields/Secondary_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Domain__c</fullName>
    <formula>RIGHT(Secondary_Email__c, LEN(Secondary_Email__c) - FIND(&apos;@&apos;, Secondary_Email__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Email Domain</label>
    <type>Text</type>
</CustomField>