force-app/main/default/objects/Lead/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>The broadest tier of company industry classification. Enriched by Clearbit.</description>
    <inlineHelpText>The broadest tier of company industry classification. Enriched by Clearbit.</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Discretionary</fullName>
            </value>
            <value>
                <fullName>Consumer Staples</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Telecommunication Services</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>