force-app/main/default/objects/Lead/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <description>Person&apos;s seniority at employer (manager, director or executive) enriched from Clearbit</description>
    <inlineHelpText>Person&apos;s seniority enriched from Clearbit</inlineHelpText>
    <label>Seniority</label>
    <type>TextArea</type>
</CustomField>