force-app/main/default/objects/Lead/fields/Sign_Up_URL__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_URL__c</fullName>
    <description>The full url submitted when a person signs up to the platform</description>
    <label>Sign Up URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>