force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>250</length>
    <type>Text</type>
</CustomField>