force-app/main/default/objects/Lead/fields/StartupOfferInbound__c.field-meta.xml
<CustomField>
    <fullName>StartupOfferInbound__c</fullName>
    <label>Startup Offer Inbound</label>
    <length>250</length>
    <type>Text</type>
</CustomField>