force-app/main/default/objects/Lead/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <description>Industry attributes provided from Clearbit</description>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Consumer Discretionary</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Household Appliances</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Sporting Goods</fullName>
            </value>
            <value>
                <fullName>Apparel, Accessories &amp; Luxury Goods</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
            <value>
                <fullName>Textiles, Apparel &amp; Luxury Goods</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Specialized Consumer Services</fullName>
            </value>
            <value>
                <fullName>Casinos &amp; Gaming</fullName>
            </value>
            <value>
                <fullName>Hotels, Restaurants &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Leisure Facilities</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Family Services</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Broadcasting</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Movies &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
            <value>
                <fullName>Retailing</fullName>
            </value>
            <value>
                <fullName>Home Improvement Retail</fullName>
            </value>
            <value>
                <fullName>Homefurnishing Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>