force-app/main/default/objects/Lead/fields/Sub_Region2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region2__c</fullName>
    <label>Sub_Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Region</valueSetName>
    </valueSet>
</CustomField>