force-app/main/default/objects/Lead/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <formula>CASE(Country,
&quot;United States&quot;,Sub_Region_AMER__c,
&quot;US&quot;,Sub_Region_AMER__c,
IF(NOT(ISBLANK(Country)),
    IF(CONTAINS($Label.Subregion_EMEA_SEE,Country + &quot;;&quot;),&quot;SEE&quot;,
        IF(CONTAINS($Label.Subregion_EMEA_CEE,Country + &quot;;&quot;),&quot;CEE + ISRAEL&quot;,
            IF(CONTAINS($Label.Subregion_EMEA_MEA,Country + &quot;;&quot;),&quot;MEA&quot;,
                IF(CONTAINS($Label.Subregion_EMEA_Africa,Country + &quot;;&quot;),&quot;MEA&quot;,
                    IF(CONTAINS($Label.Subregion_EMEA_CIS,Country + &quot;;&quot;),&quot;CIS&quot;,
                        IF(CONTAINS($Label.Subregion_EMEA_UKI,Country + &quot;;&quot;),&quot;UKI&quot;,
                            IF(CONTAINS($Label.Subregion_EMEA_Nordics,Country + &quot;;&quot;),&quot;NORDICS&quot;,
                                IF(CONTAINS($Label.Subregion_EMEA_BeNeLux,Country + &quot;;&quot;),&quot;BENELUX&quot;,
                                    IF(CONTAINS($Label.Subregion_EMEA_DACH,Country + &quot;;&quot;),&quot;DACH&quot;,
                                        &quot;&quot;
                                    )
                                )
                            )
                        )
                    )
                )
            )
        )
    ),
    &quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Region</label>
    <type>Text</type>
</CustomField>