force-app/main/default/objects/Lead/fields/Sub_Role__c.field-meta.xml
<CustomField>
    <fullName>Sub_Role__c</fullName>
    <description>Person&apos;s standardized sub-role, based on title, enriched from Clearbit</description>
    <inlineHelpText>Person&apos;s standardized sub-role, based on title, enriched from Clearbit</inlineHelpText>
    <label>Sub Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>editorial</fullName>
            </value>
            <value>
                <fullName>journalist</fullName>
            </value>
            <value>
                <fullName>video</fullName>
            </value>
            <value>
                <fullName>writer</fullName>
            </value>
            <value>
                <fullName>community</fullName>
            </value>
            <value>
                <fullName>customer_success</fullName>
            </value>
            <value>
                <fullName>investor_relations</fullName>
            </value>
            <value>
                <fullName>support</fullName>
            </value>
            <value>
                <fullName>dean</fullName>
            </value>
            <value>
                <fullName>principal</fullName>
            </value>
            <value>
                <fullName>professor</fullName>
            </value>
            <value>
                <fullName>teacher</fullName>
            </value>
            <value>
                <fullName>data_science_engineer</fullName>
            </value>
            <value>
                <fullName>devops_engineer</fullName>
            </value>
            <value>
                <fullName>electrical_engineer</fullName>
            </value>
            <value>
                <fullName>mechanical_engineer</fullName>
            </value>
            <value>
                <fullName>network_engineer</fullName>
            </value>
            <value>
                <fullName>project_engineer</fullName>
            </value>
            <value>
                <fullName>qa_engineer</fullName>
            </value>
            <value>
                <fullName>software_engineer</fullName>
            </value>
            <value>
                <fullName>systems_engineer</fullName>
            </value>
            <value>
                <fullName>web_engineer</fullName>
            </value>
            <value>
                <fullName>finance</fullName>
            </value>
            <value>
                <fullName>accounting</fullName>
            </value>
            <value>
                <fullName>investment</fullName>
            </value>
            <value>
                <fullName>tax_audit</fullName>
            </value>
            <value>
                <fullName>fitness</fullName>
            </value>
            <value>
                <fullName>medical_doctor</fullName>
            </value>
            <value>
                <fullName>nurse</fullName>
            </value>
            <value>
                <fullName>therapist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>