force-app/main/default/objects/Lead/fields/SubmitterIP__c.field-meta.xml
<CustomField>
    <fullName>SubmitterIP__c</fullName>
    <label>Submitter IP</label>
    <length>250</length>
    <type>Text</type>
</CustomField>