force-app/main/default/objects/Lead/fields/T3_Customer_Cohort__c.field-meta.xml
<CustomField>
    <fullName>T3_Customer_Cohort__c</fullName>
    <description>Set on import</description>
    <label>T3 Customer Cohort</label>
    <type>Date</type>
</CustomField>